# deep-research

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
deep_research/: module.py
scripts/: clean  pre-commit  setup
tests/: test_module.py
