[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-research"
version = "0.1.0"
description = "A sample Python package."
readme = "README.md"
authors = [
  { name = "Alexandre Prevost", email = "prevosta@gmail.com" }
]
license = { text = "MIT License" }
requires-python = ">=3.6"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://your-homepage.com"

[tool.setuptools.packages.find]
include = ["deep_research*"]

[tool.ruff]
fix = true
exclude = [".venv"]
select = ["I", "E", "F", "W"]
